Add support for Java 25 and Spring Boot 4